--- a/matchmaker-app/src/components/NavigationBar/NavigationBar.css
+++ b/matchmaker-app/src/components/NavigationBar/NavigationBar.css
@@ -2,12 +2,25 @@
 @import "tailwindcss";
 
 .navigation-bar {
-  @apply mx-5 mt-10 py-2.5 pl-2.5 pr-5;
-  @apply border border-black rounded-sm;
+  @apply mx-5 py-2.5 pl-2.5 pr-5;
+  @apply border border-black rounded-md;
+  @apply bg-[#fff];
 }
 
-.icon-image {
-  @apply w-[20px] h-[20px];
+@media screen and (min-width: 768px) {
+  .navigation-bar {
+    @apply m-0 p-2.5 mx-5;
+    @apply border-0;
+    @apply grid grid-cols-[1fr_2fr];
+  }
+}
+
+/*===================================== LOGO /*=====================================*/
+.logo-name {
+  @apply tracking-tighter;
+  font-family: "Koh Santepheap", serif;
+  font-weight: 400;
+  font-style: normal;
 }
 
 /*===================================== NAV BUTTON /*=====================================*/
@@ -16,8 +29,18 @@
   @apply rounded-sm p-2 cursor-pointer;
 }
 
+.icon-image {
+  @apply w-[20px] h-[20px];
+}
+
 .nav-button {
   @apply hidden;
+}
+
+@media screen and (min-width: 768px) {
+  .nav-button-label {
+    @apply hidden;
+  }
 }
 
 /*===================================== NAV LIST /*=====================================*/
@@ -40,4 +63,23 @@
   font-family: "Koh Santepheap", serif;
   font-weight: 400;
   font-style: normal;
+}
+
+@media screen and (min-width: 768px) {
+  .nav-list-container {
+    @apply visible h-max opacity-100;
+    @apply flex items-center justify-between;
+  }
+  .nav-list {
+    @apply flex flex-row items-center justify-between visible gap-2;
+  }
+
+  .nav-list a {
+    @apply p-5 text-black w-max font-medium text-xl rounded-2xl;
+  }
+
+  .nav-list a:hover,
+  .nav-list .link-active {
+    @apply text-white bg-[#7C0F0F];
+  }
 }
