--- a/matchmaker-app/src/index.css
+++ b/matchmaker-app/src/index.css
@@ -89,3 +89,11 @@
 .answer {
   animation: fade-in 2s forwards;
 }
+
+.radio-question-label {
+  @apply block px-6 py-3 border border-[#E0E0E0] rounded-md cursor-pointer hover:bg-[#7C0F0F] hover:text-white transition-all duration-300;
+}
+
+.radio-question-input {
+  @apply hidden;
+}
