--- a/matchmaker-app/src/index.css
+++ b/matchmaker-app/src/index.css
@@ -11,7 +11,9 @@
   display: swap;
   src: url("https://fonts.googleapis.com/css2?family=Koh+Santepheap:wght@100;300;400;700;900&display=swap");
 }
-
+html {
+  scroll-behavior: smooth;
+}
 :root {
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
