--- a/matchmaker-app/src/components/Questions/Questions.css
+++ b/matchmaker-app/src/components/Questions/Questions.css
@@ -1,6 +1,6 @@
 .submitLabel {
   background-color: #7c0f0f;
-  padding: 10px 20px;
+  padding: 10px;
   border-radius: 5px;
   position: relative;
   cursor: pointer;
