--- a/matchmaker-app/src/components/Questions/Questions.css
+++ b/matchmaker-app/src/components/Questions/Questions.css
@@ -1,3 +1,5 @@
+@import "tailwindcss";
+
 .submit-label {
   background-color: #7c0f0f;
   padding: 10px;
@@ -37,7 +39,62 @@
 }
 
 .disabled-button {
-  background-color: white;
-  color: #ced4da;
-  cursor: default;
+  @apply bg-white text-[#ced4da] cursor-default;
+}
+
+.radio-question-label {
+  @apply block xl:px-6 px-3 py-3 border border-[#E0E0E0] rounded-md cursor-pointer hover:bg-[#7C0F0F] hover:text-white transition-all duration-300;
+}
+
+.radio-question-input {
+  @apply hidden;
+}
+
+@media screen and (width > 1024px) {
+  .typewriter {
+    @apply overflow-hidden whitespace-nowrap;
+    animation: typing 1s steps(26) forwards;
+  }
+}
+
+.option {
+  animation: fade-in 2s forwards;
+}
+
+.checkbox-question-label {
+  @apply border-2 px-5 py-2 rounded-md text-[#adb5bd] border-[#adb5bd] bg-white cursor-pointer select-none;
+}
+
+.checkbox-question-input:checked + label {
+  @apply border-2 px-5 py-2 rounded-md text-[#fff] border-[#7C0F0F] bg-[#7C0F0F] cursor-pointer;
+}
+
+@keyframes fade-in {
+  0% {
+    opacity: 0;
+    visibility: hidden;
+    height: 0;
+  }
+  50% {
+    opacity: 0;
+    visibility: hidden;
+    height: 0;
+  }
+  75% {
+    height: 50%;
+  }
+  100% {
+    opacity: 100%;
+    visibility: visible;
+    height: max-content;
+  }
+}
+
+@keyframes typing {
+  0% {
+    width: 0;
+  }
+  100% {
+    width: 100%;
+  }
 }
