feat: create filter

--- a/matchmaker-app/src/components/Questions/Questions.css
+++ b/matchmaker-app/src/components/Questions/Questions.css
@@ -39,7 +39,7 @@
 }
 
 .disabled-button {
-  @apply bg-white text-[#ced4da] cursor-default;
+  @apply bg-[#e9ecef] text-[#ced4da] cursor-default;
 }
 
 .radio-question-label {
