--- a/matchmaker-app/src/components/MatchedPets/MatchedPets.css
+++ b/matchmaker-app/src/components/MatchedPets/MatchedPets.css
@@ -15,3 +15,8 @@
 .filter-label-text {
   font-family: "Koulen, sans-serif";
 }
+
+.filter-text-container:has(input[type="text"]:focus) {
+  border: 2px solid orange;
+  box-shadow: 0px 0px 0px;
+}
