--- a/matchmaker-app/src/components/MatchedPets/MatchedPets.css
+++ b/matchmaker-app/src/components/MatchedPets/MatchedPets.css
@@ -20,3 +20,16 @@
   border: 2px solid orange;
   box-shadow: 0px 0px 0px;
 }
+
+.matched-pet-root {
+  animation: fade-in 1s linear;
+}
+
+@keyframes fade-in {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
