feat: create active levels filter

--- a/matchmaker-app/src/components/AdoptFilter/InputCheckboxSelection/InputCheckboxSelection.css
+++ b/matchmaker-app/src/components/AdoptFilter/InputCheckboxSelection/InputCheckboxSelection.css
@@ -68,3 +68,16 @@
 .checkbox-wrapper input[type="checkbox"]:checked + label p {
   color: #4f2edc;
 }
+
+.list-option {
+  animation: open-list 500ms ease;
+}
+
+@keyframes open-list {
+  from {
+    opacity: 0%;
+  }
+  to {
+    opacity: 100%;
+  }
+}
