--- a/matchmaker-app/src/components/common/RequiredSignInModal/RequiredSignInModal.css
+++ b/matchmaker-app/src/components/common/RequiredSignInModal/RequiredSignInModal.css
@@ -10,6 +10,15 @@
   border-radius: 5px;
 }
 
+@media screen and (max-width: 780px) {
+  .required-modal-button {
+    width: 100%;
+    padding: 3px;
+    text-align: center;
+    font-size: 1rem;
+    border-radius: 5px;
+  }
+}
 .required-modal-button span {
   position: relative;
   z-index: 2;
