--- a/matchmaker-app/src/components/layout/NavigationBar/NavigationBar.css
+++ b/matchmaker-app/src/components/layout/NavigationBar/NavigationBar.css
@@ -10,3 +10,11 @@
     opacity: 1;
   }
 }
+
+ul li {
+  font-family: "Open Sans", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 500;
+  font-style: normal;
+  font-variation-settings: "wdth" 100;
+}
