--- a/matchmaker-app/src/components/layout/NavigationBar/NavigationBar.css
+++ b/matchmaker-app/src/components/layout/NavigationBar/NavigationBar.css
@@ -11,10 +11,19 @@
   }
 }
 
-ul li {
+.navigaion-bar-root a,
+.navigaion-bar-root button {
   font-family: "Open Sans", sans-serif;
   font-optical-sizing: auto;
   font-weight: 500;
   font-style: normal;
   font-variation-settings: "wdth" 100;
+  text-align: left;
+}
+
+@media screen and (max-width: 1240px) {
+  .navigaion-bar-root a,
+  .navigaion-bar-root button {
+    text-align: center;
+  }
 }
